<resources>
    <string name="app_name">Degree Days</string>
    <string name="home">Home</string>
    <string name="MisReg">Registry</string>
    <string name="perfil">Profile</string>
    <string name="name">Nombre del insecto</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="tMax">Max temperature</string>
    <string name="tMin">Min temperature</string>
    <string name="required">You can\'t leave this field empty</string>
    <string name="Temp">Temperature</string>
    <string name="umbralInf">Umbral Inferior</string>
    <string name="aceptar">Accept</string>
    <string name="help">Help</string>
    <string name="errorCampoVacio">" You can't leave this field empty"</string>
    <string name="search">Buscador</string>
    <string name="Registrar">Register</string>
    <string name="sinRegistros">No se encontraron registros</string>
    <string name="username_or_email">Username or email</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="check_credentials">Check your credentials</string>
    <string name="mi_cuenta">My account</string>
    <string name="settings">Settings</string>
    <string name="error_umbralmayor">"The upper threshold must have a value greater than the lower threshold "</string>
    <string name="nombre">Name</string>
    <string name="email">Email</string>
    <string name="name_lastname">Name and last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="syncronizeincloud">Synchronize data in the cloud</string>
    <string name="no_data">Data Not founded</string>
    <string name="delete_insect">Delete insect</string>
    <string name="edit_insect">Edit insect</string>
    <string name="details_insect">Insect details</string>
    <string name="logoutS">Logout</string>
    <string name="grados_centigrados">Degrees celsius</string>
    <string name="fecha_de_registro">Registration date</string>
    <string name="see_chart">Click to see chart</string>
    <string name="confirm_yourAction">Confirm your action</string>
    <string name="message_of_deleteConfirm">Are you sure of delete this insect?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="syn_in_cloud">Synchronizing data in the cloud</string>
    <string name="local_storage">Local storage</string>
    <string name="cloud_storage">Cloud storage</string>
    <string name="cancelacion">Cancel</string>
    <string name="select_option">Select an opcion</string>
    <string name="select_whereyou">Select where you want to delete all data</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="save">Save</string>
    <string name="UmbralSup">" Upper Threshold"</string>
    <string name="errorUmbralSupUmbralInf">"The upper threshold cannot be less than the lower threshold "</string>
    <string name="info">"You must enter the development thresholds "</string>
</resources>
